typography and grid section changes

--- a/_includes/colors.html
+++ b/_includes/colors.html
@@ -3,7 +3,7 @@
         <div class="inner-container">
             <h2>02 | COLORS</h2>
             <div id="primary-colors" class="color-group">
-                <p class="large">PRIMARY</p>
+                <h5>PRIMARY</h5>
                 <ul class="color-list">
                     <li>
                         <div class="color-box white-background"></div>
@@ -20,7 +20,7 @@
                 </ul>
             </div>
             <div id="secondary-colors" class="color-group">
-                <p class="large">SECONDARY</p>
+                <h5>SECONDARY</h5>
                 <ul class="color-list">
                     <li>
                         <div class="color-box light-camo-background"></div>
@@ -37,7 +37,7 @@
                 </ul>
             </div>
             <div id="accents-colors" class="color-group">
-                <p class="large">ACCENTS</p>
+                <h5>ACCENTS</h5>
                 <ul class="color-list">
                     <li>
                         <div class="color-box black-background"></div>
