--- a/_includes/elements.html
+++ b/_includes/elements.html
@@ -9,7 +9,7 @@
             </div>
             <div class="elem">
                 <h4>NAVIGATION</h4>
-                <p class="large">NAV BAR</p>
+                <h5>NAV BAR</h5>
             </div>
         </div>
     </div>
@@ -17,13 +17,13 @@
     {% include elements/nav.html %}
     <div class="container no-bottom">
         <div class="inner-container">
-            <p class="large">NAV BAR (MOBILE DROPDOWN)</p>
+            <h5>NAV BAR (MOBILE DROPDOWN)</h5>
         </div>
     </div>
     {% include elements/nav-mobile-dropdown.html %}
     <div class="container no-bottom">
         <div class="inner-container">
-            <p class="large">DROP DOWN NAV</p>
+            <h5>DROP DOWN NAV</h5>
         </div>
     </div>
     {% include elements/nav-mobile-dropdown.html dropdown="true" %}
