--- a/_includes/typography.html
+++ b/_includes/typography.html
@@ -3,39 +3,78 @@
     <div class="container">
         <div class="inner-container">
             <h2>03 | TYPOGRAPHY</h2>
-            <p>Overpass is being used instead of Interstate because... An open source webfont family inspired by Highway Gothic.  Download font here <a href="https://github.com/RedHatBrand/overpass">https://github.com/RedHatBrand/overpass</a></p>
-            <ul class="typography-list">
+            <div class="font-info">
+                <p>Interstate is the official typeface for <a href="http://www.usarmybrandportal.com/">Enterprise Army Brand</a>. In order to maintain the same look and feel across all Army digital platforms, our website utilizes <a href="http://overpassfont.org/">Overpass</a>, which is a free, open source replacement for Interstate.</p>
+                <div class="rt">
+                    <div class="btn">
+                        <div>
+                            <a href="https://github.com/RedHatBrand/overpass">
+                                Download Font Files<span></span><span></span><span></span><span></span><span></span><span></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <ul>
                 <li>
-                    <h1>H1 Overpass Bold 48px</h1>
-                    <p>Page Title, Article Title</p>
+                    <div class="span4"><h1>Header 1</h1></div>
+                    <div class="span4 lg"><p class="grey20">48px/60px</p></div>
+                    <div class="span4 md2"><p class="grey20">40px/60px</p></div>
+                    <div class="span4 md1"><p class="grey20">40px/60px Semibold</p></div>
+                    <div class="span4 sm-md"><p class="grey20">36px/60px Semibold</p></div>
+                    <div class="span4 sm"><p class="grey20">30px/60px Semibold</p></div>
+                    <div class="span4 weight"><p class="grey20">Semibold</p></div>
                 </li>
                 <li>
-                    <h2>H2 Overpass Bold 40px</h2>
-                    <p>Section Header(UC), Leader Page Secondary position title(UC)</p>
+                    <div class="span4"><h2>Header 2</h2></div>
+                    <div class="span4 lg"><p class="grey20">40px/50px</p></div>
+                    <div class="span4 md2"><p class="grey20">36px/45px</p></div>
+                    <div class="span4 md1"><p class="grey20">36px/45px Bold</p></div>
+                    <div class="span4 sm-nav"><p class="grey20">30px/37.5px Bold</p></div>
+                    <div class="span4 weight"><p class="grey20">Bold</p></div>
                 </li>
                 <li>
-                    <h3>H3 Overpass Bold 30px</h3>
-                    <p>Section Header(UC), Leader Page Secondary position title(UC)</p>
+                    <div class="span4"><h3>Header 3</h3></div>
+                    <div class="span4 lg"><p class="grey20">36px/45px</p></div>
+                    <div class="span4 md2"><p class="grey20">30px/37.5px</p></div>
+                    <div class="span4 md1"><p class="grey20">30px/37.5px Bold</p></div>
+                    <div class="span4 sm-nav"><p class="grey20">24px/30px Bold</p></div>
+                    <div class="span4 weight"><p class="grey20">Bold</p></div>
                 </li>
                 <li>
-                    <h4>H4 Overpass Bold 24px</h4>
-                    <p>Sub-Section Header(UC)</p>
+                    <div class="span4"><h4>Header 4</h4></div>
+                    <div class="span4 md2 lg"><p class="grey20">22px/27.5px</p></div>
+                    <div class="span4 md1"><p class="grey20">22px/27.5px Bold</p></div>
+                    <div class="span4 sm-nav"><p class="grey20">21px/26.26px Bold</p></div>
+                    <div class="span4 weight"><p class="grey20">Bold</p></div>
                 </li>
                 <li>
-                    <h5>H5 Overpass Bold 21 px</h5>
-                    <p>Sub-Section Header(UC)</p>
+                    <div class="span4"><h5>Header 5</h5></div>
+                    <div class="span4 lg md2"><p class="grey20">18px/24px</p></div>
+                    <div class="span4 md1"><p class="grey20">18px/24px Bold</p></div>
+                    <div class="span4 sm-nav"><p class="grey20">16px/20px Bold</p></div>
+                    <div class="span4 weight"><p class="grey20">Bold</p></div>
                 </li>
                 <li>
-                    <p class="large">Overpass Bold 18px</p>
-                    <p>Secondary Navigation(UC), Article Widget Title(TC)</p>
+                    <div class="span4"><p class="large">Large paragraph</p></div>
+                    <div class="span4 lg md2"><p class="grey20">18px/24px</p></div>
+                    <div class="span4 md1"><p class="grey20">18px/24px Bold</p></div>
+                    <div class="span4 sm-nav"><p class="grey20">16px/20px Bold</p></div>
+                    <p class="span4 grey20 weight">Bold</p>
                 </li>
                 <li>
-                    <p>Overpass Regular 16px</p>
-                    <p>Body Text</p>
+                    <div class="span4"><p>Body Text</p></div>
+                    <div class="span4 grey20 md2 lg">16px/26px</div>
+                    <div class="span4 grey20 md1">16px/26px Regular</div>
+                    <div class="span4 grey20 sm-nav">16px/26px Regular</div>
+                    <p class="span4 grey20 weight">Regular</p>
                 </li>
                 <li>
-                    <p class="small">Overpass Regular 14px/13px #83847a</p>
-                    <p>Article Page Date/Author, Article Widgets Date(UC)</p>
+                    <div class="span4"><p class="small">Small paragraph</p></div>
+                    <div class="span4 grey20 md2 lg"><p>14px/17.5px</p></div>
+                    <div class="span4 grey20 md1"><p>14px/17.5px Regular</p></div>
+                    <div class="span4 grey20 sm-nav"><p>13px/16.26px Regular</p></div>
+                    <p class="span4 grey20 weight">Regular</p>
                 </li>
             </ul>
         </div>
