--- a/_scss/base/_fonts.scss
+++ b/_scss/base/_fonts.scss
@@ -1,109 +1,86 @@
 body {
-  font: normal 1em / 1.375em $font-family;
-
-  @include breakpoints(nav mobile md_mobile sm_mobile) {
-    font: normal 1em / 1.25em $font-family;
-  }
+  font: normal 1em/1.625 $font-family;
 }
 
-h1 {
-  font: 600 2em / 1.25em $font-family;
+%h1 {
+  font: 600 1.875em/1.25 $font-family;
+
+  @include breakpoints(nav) {
+    font: 600 2.25em/1.25 $font-family;
+  }
 
   @include breakpoints(tablet lg_tablet) {
-    font: 600 2.5em / 1.125em $font-family;
+    font: 600 2.5em/1.25 $font-family;
   }
 
   @include breakpoints(sm_desktop desktop large really_big) {
-    font: 600 3em / 1.05em $font-family;
+    font: 600 3em/1.25 $font-family;
   }
 }
 
-h2 {
-  font: 700 2.5em / 1.25em $font-family;
+%h2 {
+  font: 700 1.875em/1.25 $font-family;
 
-  @include breakpoints(lg_tablet tablet) {
-    font: 700 2em / 1.25em $font-family;
+  @include breakpoints(tablet lg_tablet) {
+    font: 700 2.25em/1.25 $font-family;
   }
 
-
-  @include breakpoints(nav mobile md_mobile sm_mobile) {
-    font: 700 1.5em / 1.15385em $font-family;
-  }
-}
-
-h3 {
-  font: 700 1.875em / 1.25em $font-family;
-
-  @include breakpoints(lg_tablet tablet) {
-    font: 700 1.375em / 1.25em $font-family;
-  }
-
-
-  @include breakpoints(nav mobile md_mobile sm_mobile) {
-    font: 700 0.875em / 1.13636em $font-family;
+  @include breakpoints(sm_desktop desktop large really_big) {
+    font: 700 2.5em/1.25 $font-family;
   }
 }
 
-h4 {
-  font: 700 1.5em / 1.22222em $font-family;
+%h3 {
+  font: 700 1.5em/1.25 $font-family;
+
+  @include breakpoints(tablet lg_tablet) {
+    font: 700 1.875em/1.25 $font-family;
+  }
+
+  @include breakpoints(sm_desktop desktop large really_big) {
+    font: 700 2.25em/1.25 $font-family;
+  }
 }
 
-h5 {
-  font: 700 1.3125em / 1.22222em $font-family;
+%h4 {
+  font: 700 1.313em/1.25 $font-family;
+  
+  @include breakpoints(tablet lg_tablet sm_desktop desktop large really_big) {
+    font: 700 1.375em/1.25 $font-family;
+  }
 }
 
-p.large {
-  font: 700 1.125em / 1.22222em $font-family;
+%h5 {
+  font: 700 1em/1.25 $font-family;
+  
+  @include breakpoints(tablet lg_tablet sm_desktop desktop large really_big) {
+    font: 700 1.125em/1.333333 $font-family;
+  }
 }
 
-p.small {
-  font: 0.875em / 1.22222em $font-family;
-  color: map-get($army-branding, mediumcamo);
+h1 { @extend %h1; }
+h2 { @extend %h2; }
+h3 { @extend %h3; }
+h4 { @extend %h4; }
+h5 { @extend %h5; }
+
+h2,
+h3,
+h4,
+h5 { text-transform: uppercase; }
+
+p {
+  font: 400 1em/1.625 $font-family;
+  
+  &.large { @extend %h5; }
+  
+  &.small {
+    font: 400 .813em/1.25 $font-family;
+    
+    @include breakpoints(lg_tablet tablet sm_desktop desktop large really_big) {
+      font: 400 .875em/1.25 $font-family;
+    }
+  }
 }
 
-a {
-  color: #000000;
-}
 
-@mixin date {
-  font: 400 0.813em / 1.375em $font-family;
-  text-transform: uppercase;
-}
-
-@mixin article-header {
-  font: 700 1.625em / 1.5em $font-family;
-}
-
-@mixin strong {
-  font: 700 1.5em / 1.5em $font-family;
-}
-
-@mixin article-body {
-  font: 400 1em / 1.625em $font-family;
-}
-
-p.date {
-  @include date;
-}
-
-p.author {
-  font: 400 0.875em $font-family;
-}
-
-p.article-body {
-  @include article-body;
-}
-
-.article-header {
-  @include article-header;
-}
-
-.h4-header {
-  color: #57584f;
-  font: 900 1em $font-family;
-  text-transform: uppercase;
-}
-
-.top-stories-header {
-  font: 700 1.125em / 1.25em $font-family;
-}
