--- a/_scss/base/_page-defaults.scss
+++ b/_scss/base/_page-defaults.scss
@@ -1,7 +1,6 @@
 
 section {
   h4 {
-    font: 700 1.3em $font-family;
     margin: 50px 0 40px;
     text-align: center;
     text-transform: uppercase;
@@ -19,7 +18,6 @@ section {
   // mobile first approach
   @include breakpoints(lg_tablet sm_desktop desktop large really_big) {
     h4 {
-      font: 700 1.5em / 1.22222em $font-family;
       margin: 60px 0 54px;
       text-align: left;
       
@@ -27,7 +25,17 @@ section {
     }
   }
   
+  h1,
+  h2,
+  h3,
+  h4 { @include custom-transition(font-size .25s ease); }
+  
+  @include breakpoints(mobile nav tablet) {
+    h1, h2, h3, h4 { text-align: center; }
+  }
+  
   a {
+    color: #000;
     font-weight: 600;
     text-decoration: none;
     
