--- a/_includes/grid.html
+++ b/_includes/grid.html
@@ -111,27 +111,27 @@
             <h4>GRID LAYOUT</h4>
             <p>When the grid is implemented, each column has a 15px padding on either side, which results in a 30px gutter between and a 15px gutter on the grid edges. Column widths can be mixed to create a variety of grid layouts, as seen below.</p>
             <div class="grid-example">
-                <div class="row grey10-background">
-                    <div class="span2">
+                <div class="row">
+                    <div class="span2 grey10-background">
                         <p class="gold-background">1/6</p>
                     </div>
-                    <div class="span10">
+                    <div class="span10 grey20-background">
                         <p class="gold-background">5/6</p>
                     </div>
                 </div>
-                <div class="row grey10-background">
-                    <div class="span9">
+                <div class="row">
+                    <div class="span9 grey10-background">
                         <p class="gold-background">3/4</p>
                     </div>
-                    <div class="span3">
+                    <div class="span3 grey20-background">
                         <p class="gold-background">1/4</p>
                     </div>
                 </div>
-                <div class="row grey10-background">
-                    <div class="span4">
+                <div class="row">
+                    <div class="span4 grey10-background">
                         <p class="gold-background">1/3</p>
                     </div>
-                    <div class="span8">
+                    <div class="span8 grey20-background">
                         <p class="gold-background">2/3</p>
                     </div>
                 </div>
