--- a/_includes/grid.html
+++ b/_includes/grid.html
@@ -18,99 +18,96 @@
                     <div class="span6">
                         <p class="gold-background">1/2</p>
                     </div>
-                   <div class="span6">
-                       <p class="gold-background">50%</p>
-                   </div>
+                    <div class="span6">
+                        <p class="gold-background">50%</p>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="span4">
                         <p class="gold-background">1/3</p>
                     </div>
-                   <div class="span4">
-                       <p class="gold-background">&nbsp;</p>
-                   </div>
-                   <div class="span4">
-                       <p class="gold-background">33%</p>
-                   </div>
+                    <div class="span4">
+                        <p class="gold-background">&nbsp;</p>
+                    </div>
+                    <div class="span4">
+                        <p class="gold-background">33%</p>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="span3">
                         <p class="gold-background">1/4</p>
                     </div>
-                   <div class="span3">
-                       <p class="gold-background">&nbsp;</p>
-                   </div>
-                   <div class="span3">
-                       <p class="gold-background">&nbsp;</p>
-                   </div>
-                   <div class="span3">
-                       <p class="gold-background">25%</p>
-                   </div>
+                    <div class="span3">
+                        <p class="gold-background">&nbsp;</p>
+                    </div>
+                    <div class="span3">
+                        <p class="gold-background">&nbsp;</p>
+                    </div>
+                    <div class="span3">
+                        <p class="gold-background">25%</p>
+                    </div>
                 </div>
                 <div class="row hide-mobile">
                     <div class="span2">
                         <p class="gold-background">1/6</p>
                     </div>
-                   <div class="span2">
-                       <p class="gold-background">&nbsp;</p>
-                   </div>
-                   <div class="span2">
-                       <p class="gold-background">&nbsp;</p>
-                   </div>
-                   <div class="span2">
-                       <p class="gold-background">&nbsp;</p>
-                   </div>
-                   <div class="span2">
-                       <p class="gold-background">&nbsp;</p>
-                   </div>
-                   <div class="span2">
-                       <p class="gold-background">16.6%</p>
-                   </div>
+                    <div class="span2">
+                        <p class="gold-background">&nbsp;</p>
+                    </div>
+                    <div class="span2">
+                        <p class="gold-background">&nbsp;</p>
+                    </div>
+                    <div class="span2">
+                        <p class="gold-background">&nbsp;</p>
+                    </div>
+                    <div class="span2">
+                        <p class="gold-background">&nbsp;</p>
+                    </div>
+                    <div class="span2">
+                        <p class="gold-background">16.6%</p>
+                    </div>
                 </div>
                 <div class="row hide-tablet">
                     <div class="span1">
                         <p class="gold-background">1/12</p>
                     </div>
-                   <div class="span1">
-                       <p class="gold-background">&nbsp;</p>
-                   </div>
-                   <div class="span1">
-                       <p class="gold-background">&nbsp;</p>
-                   </div>
-                   <div class="span1">
-                       <p class="gold-background">&nbsp;</p>
-                   </div>
-                   <div class="span1">
-                       <p class="gold-background">&nbsp;</p>
-                   </div>
-                   <div class="span1">
-                       <p class="gold-background">&nbsp;</p>
-                   </div>
-                   <div class="span1">
-                       <p class="gold-background">&nbsp;</p>
-                   </div>
-                   <div class="span1">
-                       <p class="gold-background">&nbsp;</p>
-                   </div>
-                   <div class="span1">
-                       <p class="gold-background">&nbsp;</p>
-                   </div>
-                   <div class="span1">
-                       <p class="gold-background">&nbsp;</p>
-                   </div>
-                   <div class="span1">
-                       <p class="gold-background">&nbsp;</p>
-                   </div>
-                   <div class="span1">
-                       <p class="gold-background">8.3%</p>
-                   </div>
+                    <div class="span1">
+                        <p class="gold-background">&nbsp;</p>
+                    </div>
+                    <div class="span1">
+                        <p class="gold-background">&nbsp;</p>
+                    </div>
+                    <div class="span1">
+                        <p class="gold-background">&nbsp;</p>
+                    </div>
+                    <div class="span1">
+                        <p class="gold-background">&nbsp;</p>
+                    </div>
+                    <div class="span1">
+                        <p class="gold-background">&nbsp;</p>
+                    </div>
+                    <div class="span1">
+                        <p class="gold-background">&nbsp;</p>
+                    </div>
+                    <div class="span1">
+                        <p class="gold-background">&nbsp;</p>
+                    </div>
+                    <div class="span1">
+                        <p class="gold-background">&nbsp;</p>
+                    </div>
+                    <div class="span1">
+                        <p class="gold-background">&nbsp;</p>
+                    </div>
+                    <div class="span1">
+                        <p class="gold-background">&nbsp;</p>
+                    </div>
+                    <div class="span1">
+                        <p class="gold-background">8.3%</p>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="inner-container">
-            <h4>GRID LAYOUT</h4>
-            <p>When the grid is implemented, each column has a 15px padding on either side, which results in a 30px gutter between and a 15px gutter on the grid edges. Column widths can be mixed to create a variety of grid layouts, as seen below.</p>
-            <div class="grid-example">
+                
+                <h4>GRID LAYOUT</h4>
+                <p class="responsive-grid">When the grid is implemented, each column has a 15px padding on either side, which results in a 30px gutter between and a 15px gutter on the grid edges. Column widths can be mixed to create a variety of grid layouts, as seen below.</p>
                 <div class="row">
                     <div class="span2 grey10-background">
                         <p class="gold-background">1/6</p>
