cleaner markup is cleaner

--- a/_includes/typography.html
+++ b/_includes/typography.html
@@ -18,62 +18,62 @@
             <ul>
                 <li>
                     <div class="span4"><h1>Header 1</h1></div>
-                    <div class="span4 lg"><p class="grey20">48px/60px</p></div>
-                    <div class="span4 md2"><p class="grey20">40px/60px</p></div>
-                    <div class="span4 md1"><p class="grey20">40px/60px Semibold</p></div>
-                    <div class="span4 sm-md"><p class="grey20">36px/60px Semibold</p></div>
-                    <div class="span4 sm"><p class="grey20">30px/60px Semibold</p></div>
-                    <div class="span4 weight"><p class="grey20">Semibold</p></div>
+                    <p class="span4 lg grey20">48px/60px</p>
+                    <p class="span4 md2 grey20">40px/60px</p>
+                    <p class="span4 md1 grey20">40px/60px Semibold</p>
+                    <p class="span4 sm-md grey20">36px/60px Semibold</p>
+                    <p class="span4 sm grey20">30px/60px Semibold</p>
+                    <p class="span4 weight grey20">Semibold</p>
                 </li>
                 <li>
                     <div class="span4"><h2>Header 2</h2></div>
-                    <div class="span4 lg"><p class="grey20">40px/50px</p></div>
-                    <div class="span4 md2"><p class="grey20">36px/45px</p></div>
-                    <div class="span4 md1"><p class="grey20">36px/45px Bold</p></div>
-                    <div class="span4 sm-nav"><p class="grey20">30px/37.5px Bold</p></div>
-                    <div class="span4 weight"><p class="grey20">Bold</p></div>
+                    <p class="span4 lg grey20">40px/50px</p>
+                    <p class="span4 md2 grey20">36px/45px</p>
+                    <p class="span4 md1 grey20">36px/45px Bold</p>
+                    <p class="span4 sm-nav grey20">30px/37.5px Bold</p>
+                    <p class="span4 weight grey20">Bold</p>
                 </li>
                 <li>
                     <div class="span4"><h3>Header 3</h3></div>
-                    <div class="span4 lg"><p class="grey20">36px/45px</p></div>
-                    <div class="span4 md2"><p class="grey20">30px/37.5px</p></div>
-                    <div class="span4 md1"><p class="grey20">30px/37.5px Bold</p></div>
-                    <div class="span4 sm-nav"><p class="grey20">24px/30px Bold</p></div>
-                    <div class="span4 weight"><p class="grey20">Bold</p></div>
+                    <p class="span4 lg grey20">36px/45px</p>
+                    <p class="span4 md2 grey20">30px/37.5px</p>
+                    <p class="span4 md1 grey20">30px/37.5px Bold</p>
+                    <p class="span4 sm-nav grey20">24px/30px Bold</p>
+                    <p class="span4 weight grey20">Bold</p>
                 </li>
                 <li>
                     <div class="span4"><h4>Header 4</h4></div>
-                    <div class="span4 md2 lg"><p class="grey20">22px/27.5px</p></div>
-                    <div class="span4 md1"><p class="grey20">22px/27.5px Bold</p></div>
-                    <div class="span4 sm-nav"><p class="grey20">21px/26.26px Bold</p></div>
-                    <div class="span4 weight"><p class="grey20">Bold</p></div>
+                    <p class="span4 md2 lg grey20">22px/27.5px</p>
+                    <p class="span4 md1 grey20">22px/27.5px Bold</p>
+                    <p class="span4 sm-nav grey20">21px/26.26px Bold</p>
+                    <p class="span4 weight grey20">Bold</p>
                 </li>
                 <li>
                     <div class="span4"><h5>Header 5</h5></div>
-                    <div class="span4 lg md2"><p class="grey20">18px/24px</p></div>
-                    <div class="span4 md1"><p class="grey20">18px/24px Bold</p></div>
-                    <div class="span4 sm-nav"><p class="grey20">16px/20px Bold</p></div>
-                    <div class="span4 weight"><p class="grey20">Bold</p></div>
+                    <p class="span4 lg md2 grey20">18px/24px</p>
+                    <p class="span4 md1 grey20">18px/24px Bold</p>
+                    <p class="span4 sm-nav grey20">16px/20px Bold</p>
+                    <p class="span4 weight grey20">Bold</p>
                 </li>
                 <li>
-                    <div class="span4"><p class="large">Large paragraph</p></div>
-                    <div class="span4 lg md2"><p class="grey20">18px/24px</p></div>
-                    <div class="span4 md1"><p class="grey20">18px/24px Bold</p></div>
-                    <div class="span4 sm-nav"><p class="grey20">16px/20px Bold</p></div>
+                    <p class="span4 large">Large paragraph</p>
+                    <p class="span4 lg md2 grey20">18px/24px</p>
+                    <p class="span4 md1 grey20">18px/24px Bold</p>
+                    <p class="span4 sm-nav grey20">16px/20px Bold</p>
                     <p class="span4 grey20 weight">Bold</p>
                 </li>
                 <li>
-                    <div class="span4"><p>Body Text</p></div>
-                    <div class="span4 grey20 md2 lg">16px/26px</div>
-                    <div class="span4 grey20 md1">16px/26px Regular</div>
-                    <div class="span4 grey20 sm-nav">16px/26px Regular</div>
+                    <p class="span4">Body Text</p>
+                    <p class="span4 grey20 md2 lg">16px/26px</p>
+                    <p class="span4 grey20 md1">16px/26px Regular</p>
+                    <p class="span4 grey20 sm-nav">16px/26px Regular</p>
                     <p class="span4 grey20 weight">Regular</p>
                 </li>
                 <li>
-                    <div class="span4"><p class="small">Small paragraph</p></div>
-                    <div class="span4 grey20 md2 lg"><p>14px/17.5px</p></div>
-                    <div class="span4 grey20 md1"><p>14px/17.5px Regular</p></div>
-                    <div class="span4 grey20 sm-nav"><p>13px/16.26px Regular</p></div>
+                    <p class="span4 small">Small paragraph</p>
+                    <p class="span4 grey20 md2 lg">14px/17.5px</p>
+                    <p class="span4 grey20 md1">14px/17.5px Regular</p>
+                    <p class="span4 grey20 sm-nav">13px/16.26px Regular</p>
                     <p class="span4 grey20 weight">Regular</p>
                 </li>
             </ul>
