--- a/_includes/typography.html
+++ b/_includes/typography.html
@@ -23,7 +23,7 @@
                     <p class="span4 md1 grey20">40px/60px Semibold</p>
                     <p class="span4 sm-md grey20">36px/60px Semibold</p>
                     <p class="span4 sm grey20">30px/60px Semibold</p>
-                    <p class="span4 weight grey20">Semibold</p>
+                    <p class="span4 weight grey20">Regular</p>
                 </li>
                 <li>
                     <div class="span4"><h2>Header 2</h2></div>
@@ -67,14 +67,14 @@
                     <p class="span4 grey20 md2 lg">16px/26px</p>
                     <p class="span4 grey20 md1">16px/26px Regular</p>
                     <p class="span4 grey20 sm-nav">16px/26px Regular</p>
-                    <p class="span4 grey20 weight">Regular</p>
+                    <p class="span4 grey20 weight">Light</p>
                 </li>
                 <li>
                     <p class="span4 small">Small paragraph</p>
                     <p class="span4 grey20 md2 lg">14px/17.5px</p>
                     <p class="span4 grey20 md1">14px/17.5px Regular</p>
                     <p class="span4 grey20 sm-nav">13px/16.26px Regular</p>
-                    <p class="span4 grey20 weight">Regular</p>
+                    <p class="span4 grey20 weight">Light</p>
                 </li>
             </ul>
         </div>
