--- a/_scss/elements/_buttons.scss
+++ b/_scss/elements/_buttons.scss
@@ -32,8 +32,6 @@
     &.white {
       background: map-get($army-branding, white);
       border: 1px solid map-get($army-branding, black);
-      
-      a { color: map-get($army-branding, black); }
     }
   }
   
@@ -45,9 +43,7 @@
     text-decoration: none;
     text-transform: uppercase;
     
-    &:hover {
-      text-decoration: none;
-    }
+    &:hover { text-decoration: none; }
   }
 }
 
