--- a/_scss/elements/_custom-select.scss
+++ b/_scss/elements/_custom-select.scss
@@ -1,4 +1,5 @@
 .custom-select {
+  background-color: #fff;
   border: 1px solid map-get($army-branding, grey50);
   position: relative;
   padding: 5px;
