more small changes

--- a/_includes/view-github.html
+++ b/_includes/view-github.html
@@ -4,7 +4,7 @@
             <ul class="github-links">
                 <li>
                     <div class="btn">
-                        <div class="white">
+                        <div>
                             <a href="https://github.com/armydotmil/armydotmil.github.io/archive/master.zip">
                                 Download Code<span></span><span></span><span></span><span></span><span></span><span></span>
                             </a>
