--- a/css/guide.scss
+++ b/css/guide.scss
@@ -80,9 +80,9 @@ section {
 }
 
 .inner-container {
-  h2 {
-    margin-bottom: 60px;
-  }
+  h2 { margin-bottom: 60px; }
+
+  h5 { margin-bottom: 20px; }
 }
 
 #grid {
