white button doesnt get a hover

--- a/_includes/elements/buttons.html
+++ b/_includes/elements/buttons.html
@@ -1,24 +1,18 @@
 
 <div class="btn">
     <div class="black">
-        <a href="#">
-            READ MORE<span></span><span></span><span></span><span></span><span></span><span></span>
-        </a>
+        <a href="#">READ MORE<span></span><span></span><span></span><span></span><span></span><span></span></a>
     </div>
 </div>
 
 <div class="btn">
     <div>
-        <a href="#">
-            READ MORE<span></span><span></span><span></span><span></span><span></span><span></span>
-        </a>
+        <a href="#">READ MORE<span></span><span></span><span></span><span></span><span></span><span></span></a>
     </div>
 </div>
 
 <div class="btn">
     <div class="white">
-        <a href="#">
-            READ MORE<span></span><span></span><span></span><span></span><span></span><span></span>
-        </a>
+        <a href="#">READ MORE</a>
     </div>
 </div>
