moved paragraph defaults, updated top stories, updated page defaults and fonts...

--- a/_includes/elements/top-stories.html
+++ b/_includes/elements/top-stories.html
@@ -1,25 +1,38 @@
-    <ul class="top-stories">
-        <li>
-            <h4>TOP STORIES</h4>
-        </li>
-        <li>
-            <p class="small">NOVEMBER 18, 2016</p>
-            <p>Army National Guard director: Two weeks annually, weekend per month enough?</p>
-        </li>
-        <li>
-            <p class="small">NOVEMBER 16, 2015</p>
-            <p>Army researchers add power, range to artillery</p>
-        </li>
-        <li>
-            <p class="small">NOVEMBER 14, 2015</p>
-            <p>Sky Soldiers conduct historic airborne operation during Exercise Iron Sword 15</p>
-        </li>
-        <li>
-            <p class="small">NOVEMBER 18, 2015</p>
-            <p>Program helps Soldiers, veterans get commercial driver's license</p>
-        </li>
-        <li>
-            <p class="small">NOVEMBER 14, 2015</p>
-            <p>Veterans recall Battle of Ia Drang at 50th anniversary</p>
-        </li>
-    </ul>
+<div class="top-stories">
+    <div id="top-stories-fixed" class="fixed">
+        <h4>TOP STORIES</h4>
+        <ul>
+            <li>
+                <a href="//www.army.mil/article/169229" title="Multinational Recovery Training Supports NATO Interoperability">
+                    <span>June 7, 2016</span>
+                    <span>Multinational Recovery Training Supports NATO Interoperability</span>
+                </a>
+            </li>
+            <li>
+                <a href="//www.army.mil/article/169177" title="72nd D-Day liberation of Normandy observed">
+                    <span>June 6, 2016</span>
+                    <span>72nd D-Day liberation of Normandy observed</span>
+                </a>
+            </li>
+            <li>
+                <a href="//www.army.mil/article/169212" title="Anakonda 16 officially kicks off in Poland">
+                    <span>June 6, 2016</span>
+                    <span>Anakonda 16 officially kicks off in Poland</span>
+                </a>
+            </li>
+            <li>
+                <a href="//www.army.mil/article/169167" title="ROTC has minted over 1,000,000 new lieutenants during its 100-year history">
+                    <span>June 5, 2016</span>
+                    <span>ROTC has minted over 1,000,000 new lieutenants during its 100-year history</span>
+                </a>
+            </li>
+            <li>
+                <a href="//www.army.mil/article/168884" title="OPAT to guide recruits to groups of, rather than specific MOSs">
+                    <span>June 3, 2016</span>
+                    <span>OPAT to guide recruits to groups of, rather than specific MOSs</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+</div>
+
