--- a/_includes/typography.html
+++ b/_includes/typography.html
@@ -15,7 +15,7 @@
                     </div>
                 </div>
             </div>
-            <ul>
+            <ul class="fonts-list">
                 <li>
                     <div class="span4"><h1>Header 1</h1></div>
                     <p class="span4 lg grey20">48px/60px</p>
@@ -77,6 +77,18 @@
                     <p class="span4 grey20 weight">Light</p>
                 </li>
             </ul>
+            <h4>PARAGRAPH DEFAULTS</H4>
+            <p>Lorem ipsum dolor sit <a href="//www.army.mil/">amet</a>, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco <a href="//www.army.mil/">laboris nisi ut aliquip ex ea commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            
+            <div class="simple-list">
+                <ul class="simple-column-full">
+                    <li>Font size - 1em (16px)</li>
+                    <li>Line height - 1.625em (26px)</li>
+                    <li>Inline links - semi-bold (600), underlined on hover</li>
+                    <li>Bottom margin - 1.25em (20px)</li>
+                    <li>Last paragraphs in each section have a bottom margin of 0 (using the :last-child selector)</li>
+                </ul>
+            </div>
         </div>
     </div>
 </section>
