--- a/_scss/base/_page-defaults.scss
+++ b/_scss/base/_page-defaults.scss
@@ -1,60 +1,81 @@
 
 section {
+  overflow: hidden;
+  
   h4 {
     margin: 50px 0 40px;
-    text-align: center;
-    text-transform: uppercase;
-    @include custom-transition(font-size .25s ease);
     
     &:first-child { margin: 0 0 40px; }
     
+    &.subhead { margin-top: 0; }
+    
     @include header-underline(gold);
-  }
-  
-  @include breakpoints(mobile nav tablet) {
-    h1, h2, h3, h4, h5, h6 { text-align: center; }
   }
   
   // mobile first approach
   @include breakpoints(lg_tablet sm_desktop desktop large really_big) {
     h4 {
       margin: 60px 0 54px;
-      text-align: left;
       
       &:first-child { margin: 0 0 54px; }
     }
   }
+}
+
+h2,
+h3,
+h4,
+h5 { text-transform: uppercase; }
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  @include custom-transition(font-size .25s ease);
+  text-align: center;
+}
+
+@include breakpoints(lg_tablet sm_desktop desktop large really_big) {
+  h1, h2, h3, h4, h5 { text-align: left; }
+}
+
+p {
+  font: 400 1em/1.625 $font-family;
   
-  h1,
-  h2,
-  h3,
-  h4 { @include custom-transition(font-size .25s ease); }
+  &.large { @extend %h5; }
   
-  @include breakpoints(mobile nav tablet) {
-    h1, h2, h3, h4 { text-align: center; }
-  }
-  
-  a {
-    color: #000;
-    font-weight: 600;
-    text-decoration: none;
+  &.small {
+    font: 400 .813em/1.25 $font-family;
     
-    &:hover {
-      text-decoration: underline;
+    @include breakpoints(lg_tablet tablet sm_desktop desktop large really_big) {
+      font: 400 .875em/1.25 $font-family;
     }
   }
   
-  ul,
-  p {
-    line-height: 1.625em;
-    margin-bottom: 1.25em;
-    
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
+  &.author { font: 400 .875 $font-family; }
+}
+
+a {
+  color: #000;
+  font-weight: 600;
+  text-decoration: none;
   
-  strong {
-    font-weight: 700;
+  &:hover {
+    text-decoration: underline;
   }
 }
+
+ul,
+p {
+  line-height: 1.625em;
+  margin-bottom: 1.25em;
+  
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+strong { font-weight: 700; }
+
+
