--- a/_scss/elements/_custom-select.scss
+++ b/_scss/elements/_custom-select.scss
@@ -1,6 +1,6 @@
 .custom-select {
   background-color: #fff;
-  border: 1px solid map-get($army-branding, grey50);
+  border: 1px solid map-get($army-branding, grey30);
   position: relative;
   padding: 5px;
   @include box-sizing(content-box);
@@ -57,9 +57,7 @@
     width: 11px;
   }
   .custom-overlay,
-  .custom-options {
-    display: none;
-  }
+  .custom-options { display: none; }
 
   @include breakpoints(sm_desktop desktop large really_big) {
     .custom-overlay {
@@ -74,7 +72,7 @@
     }
     .custom-options {
       background-color: #ffffff;
-      border: 1px solid map-get($army-branding, grey50);
+      border: 1px solid map-get($army-branding, grey30);
       left: -1px;
       margin-top: 5px;
       max-height: 275px;
@@ -92,23 +90,18 @@
           font-weight: 600;
           padding: 11px 25px 8px;
 
-          &:last-child {
-            border-width: 0;
-          }
+          @include custom-transition(background-color .25s ease);
 
-          &:hover {
-            background-color: map-get($army-branding, gold);
-          }
+          &:last-child { border-width: 0; }
+
+          &:hover { background-color: map-get($army-branding, gold); }
         }
       }
     }
     &.show-options {
-      .custom-options {
-        display: block;
-      }
-      &::after {
-        background-position: -181px -50px;
-      }
+      .custom-options { display: block; }
+      
+      &::after { background-position: -181px -50px; }
     }
   }
 }
