--- a/css/style.scss
+++ b/css/style.scss
@@ -3,6 +3,11 @@
 ---
 
 // ----------------------------------------------------------------------
+// Reset
+// ----------------------------------------------------------------------
+@import "base/reset";
+
+// ----------------------------------------------------------------------
 // Mixins
 // ----------------------------------------------------------------------
 @import "base/mixins";
@@ -12,10 +17,9 @@
 // Defaults
 // ----------------------------------------------------------------------
 @import "base/variables";
-@import "base/reset";
 @import "base/colors";
 @import "base/fonts";
-@import "base/page-defaults";
+@import "base/helper-classes";
 
 // ----------------------------------------------------------------------
 // Layout
@@ -27,18 +31,17 @@
 // Elements
 // ----------------------------------------------------------------------
 @import "elements/buttons";
+@import "elements/lists";
+@import "elements/accordion";
+@import "elements/custom-select";
+@import "elements/headlines";
 @import "elements/header";
 @import "elements/social";
 @import "elements/parallax-footer";
 @import "elements/footer";
 @import "elements/top-stories";
 @import "elements/nav";
-@import "elements/buttons";
 @import "elements/news";
-@import "elements/lists";
-@import "elements/accordion";
-@import "elements/custom-select";
-@import "elements/headlines";
 @import "elements/dropdown-nav";
 @import "elements/leaders";
 @import "elements/playlist";
@@ -46,135 +49,4 @@
 @import "elements/quotes";
 @import "elements/notifications";
 
-//primary colors
-.white {
-  color: map-get($army-branding, white);
-}
 
-.gold {
-  color: map-get($army-branding, gold);
-}
-
-.army-black {
-  color: map-get($army-branding, armyblack);
-}
-
-.white-background {
-  background-color: map-get($army-branding, white);
-}
-
-.gold-background {
-  background-color: map-get($army-branding, gold);
-}
-
-.army-black-background {
-  background-color: map-get($army-branding, armyblack);
-}
-
-//secondary colors
-
-.dark-camo {
-  color: map-get($army-branding, darkcamo);
-}
-
-.medium-camo {
-  color: map-get($army-branding, mediumcamo);
-}
-
-.light-camo {
-  color: map-get($army-branding, lightcamo);
-}
-
-.dark-camo-background {
-  background-color: map-get($army-branding, darkcamo);
-}
-
-.medium-camo-background {
-  background-color: map-get($army-branding, mediumcamo);
-}
-
-.light-camo-background {
-  background-color: map-get($army-branding, lightcamo);
-}
-
-//accent colors
-
-.black {
-  color: map-get($army-branding, black);
-}
-
-.grey90 {
-  color: map-get($army-branding, grey90);
-}
-
-.grey80 {
-  color: map-get($army-branding, grey80);
-}
-
-.grey70 {
-  color: map-get($army-branding, grey70);
-}
-
-.grey60 {
-  color: map-get($army-branding, grey60);
-}
-
-.grey50 {
-  color: map-get($army-branding, grey50);
-}
-
-.grey40 {
-  color: map-get($army-branding, grey40);
-}
-
-.grey30 {
-  color: map-get($army-branding, grey30);
-}
-
-.grey20 {
-  color: map-get($army-branding, grey20);
-}
-
-.grey10 {
-  color: map-get($army-branding, grey10);
-}
-
-.black-background {
-  background-color: map-get($army-branding, black);
-}
-
-.grey90-background {
-  background-color: map-get($army-branding, grey90);
-}
-
-.grey80-background {
-  background-color: map-get($army-branding, grey80);
-}
-
-.grey70-background {
-  background-color: map-get($army-branding, grey70);
-}
-
-.grey60-background {
-  background-color: map-get($army-branding, grey60);
-}
-
-.grey50-background {
-  background-color: map-get($army-branding, grey50);
-}
-
-.grey40-background {
-  background-color: map-get($army-branding, grey40);
-}
-
-.grey30-background {
-  background-color: map-get($army-branding, grey30);
-}
-
-.grey20-background {
-  background-color: map-get($army-branding, grey20);
-}
-
-.grey10-background {
-  background-color: map-get($army-branding, grey10);
-}
